<resources>
    <string name="app_name">Music App</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="song">Song</string>
    <string name="playlist">Playlist</string>
    <string name="add">Add</string>
    <string name="no_records_found">No records found</string>
    <string name="add_music">Add music</string>
    <string name="name">Name</string>
    <string name="add_to_library">Add to library</string>
    <string name="error">An error occurred, while initializing module.</string>
    <string name="fill_all_fields">All field are necessary.</string>
    <string name="record_success">Record was successfully saved.</string>
    <string name="generic_add_record_title">What you are up today...</string>
    <string name="playlist_add_record_title">Creating playlist...</string>
    <string name="song_add_record_title">Creating song...</string>
    <string name="playlist_song_template">Song #%d</string>
</resources>
